# UReCA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
classification/: CMakeLists.txt  classification.cpp  classification.h  models.cpp
models/: CMakeLists.txt  models.cpp
module-classification/: CMakeLists.txt  classification.cpp  classification.h
module-regression/: CMakeLists.txt  regression.cpp  regression.h
modules/classification/: CMakeLists.txt  classification.cpp  classification.h
modules/regression/: CMakeLists.txt  regression.cpp  regression.h
modules/toolset/: CMakeLists.txt  toolset.cpp  toolset.h
print/: CMakeLists.txt  print.cpp  print.h  testing.cpp
python-testing/: _test-print.py  classification.cp311-win_amd64.pyd  classification.exp  classification.lib  models.cp311-win_amd64.pyd  models.exp  models.lib  myadd.cp311-win_amd64.pyd  myadd.exp  myadd.lib  myprint.cp311-win_amd64.pyd  myprint.exp  myprint.lib  regression.cp311-win_amd64.pyd  regression.exp  regression.lib  regression.pyd  test-print.py  testing.py  tools.cp311-win_amd64.pyd  tools.exp  tools.lib
python-testing/modules/: classification.pyd
regression/: CMakeLists.txt  regression.cpp  regression.h
test-enviroment/: models.py  toolset.py
testing-python/: classification.cp312-win_amd64.pyd  regression.cp312-win_amd64.pyd  testing.py
testing-python/modules/: regression.exp
tools/: CMakeLists.txt  tools.cpp
